=== 2016-12-12
* Enhancements
  * Added #hidden_field_elements to ElementLocators
  * Added #text_area_elements to ElementLocators
  * Added #select_list_elements to ElementLocators
  * Added #link_elements to ElementLocators
  * Added #checkbox_elements to ElementLocators
  * Added #radio_button_elements to ElementLocators
  * Added #div_elements to ElementLocators
=== 2016-11-15
* Enhancements
  * Added #button_elements to ElementLocators
  * Added #text_field_elements to ElementLocators
  * Added #navigate_to method to PageFactory to navigate to a page through previous pages
  * Added routes to PageFactory to collect routes through the site
  * Added #continue_navigation_to method to PageFactory which begins at @current_page
******1.1.0******
=== 2016-11-14
* Enhancements
  * Added ability to find a parent of an Element
  * Added #focus method to Element
=== 2016-08-05
* Enhancements
  * Added ability to find Checkbox by :value
  * Added ability to find HiddenField by :value
  * Added #fire_event method to Element
* Fixes
  * Updated #populate_page_with to no longer attempt to set a value in a field that is disabled
=== 2016-08-04
* Enhancements
  * Added ability to find TextField by :title
  * Added ability to find Image by :alt
  * Added ability to find Form by :action
  * Added ability to find Image by :src
=== 2016-08-03
* Enhancements
  * Added ability to find image buttons by src
  * Added ability to find image buttons by alt
  * Added first_row and last_row methods to table
  * Added new module PagePopulator with single method populate_page_with
  * Added deprecation warning to the method_missing method on Element.
  * Added all of the file_field locators
  * Added full support for file_field element
=== 2016-08-02
* Enhancements
  * Added all of the h5 locators
  * Added all of the h6 locators
  * Added all of the paragraph locators
  * Added the Paragraph class
  * Added #current_url to Druid
  * Added #style to Element
  * Added #inspect to Element