@@ -117,12 +117,16 @@ describe Druid::ElementLocators do
     expect(elements[0]).to be_instance_of Druid::Elements::Div
   end
 
-
-
   it "should find a span element" do
     expect(driver).to receive(:span).with(:id => 'blah').and_return(driver)
     element = page.span_element(:id => 'blah')
     expect(element).to be_instance_of Druid::Elements::Span
+  end
+
+  it "should find all span elements" do
+    expect(driver).to receive(:spans).with(:id => 'blah').and_return([driver])
+    elements = page.span_elements(:id => 'blah')
+    expect(elements[0]).to be_instance_of Druid::Elements::Span
   end
 
   it "should find a table element" do
